--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/Proyecto_Biblioteca?serverTimezone=America/Lima
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=root
