--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.port=8081
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/Proyecto_Biblioteca?serverTimezone=America/Lima
+spring.datasource.url=jdbc:mysql://localhost:3306/proyecto?serverTimezone=America/Lima
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=1234
